Aug 08, 2024
  SSSOMGenerator: added generation of RDO to MIM file

Jul 29, 2024
  added EfoXrefGenerator to generate reciprocal EFO xrefs for VT, MP, HP, CMP and RDO ontologies

Jul 25, 2024
  added SSOM TSV file validator
  draft version of SSSOM file generator

Jul 16, 2024
  CL ontology: updated to release v2024-07-10

Jul 08, 2024
  CL ontology: updated to release v2024-05-15
  CL ontology: improved loading of 'develops-from' relations

Jun 17, 2024
  patch to remove cyclic GO CC relationships

May 15, 2024
  TermStatsLoader: updating to include rgdvariant type for GWAS variant annotations

May 14, 2024
  OboFileCreator: 'primary_id' synonyms are exported as 'xref', not ad 'alt_id'
    also malformed accessions in 'xref' and 'alt_id' fields are no longer exported

Apr 11, 2024
  CL ontology: updated to release v2024-04-05

Feb 13, 2024
  CL ontology: updated to release v2024-02-13

Feb 12, 2024
  TaxonConstraints loader: added qc to ensure GO terms are in RGD db
  cleanup: removed unused 'gviewer_stats' logger

Jan 08, 2024
  updated CL source to CL release 2024-01-04

Dec 08, 2023
  updated CL source

Dec 04, 2023
  implemented EfoXrefCreator: to create xrefs for EFO ontology
    based on xrefs in other ontologies referencing EFO

Nov 28, 2023
  better mapper for EFO-VT
  new source for VT ontology

Nov 07, 2023
  EFO-CMO loader

Oct 30, 2023
  better parsing for EFO ontology

Oct 23, 2023
  updated CL source to CL release 2023-10-19

Oct 04, 2023
  updated CL source to CL release 2023-09-21

Sep 25, 2023
  removed obsolete code to precompute gviewer data in ONT_TERM_STATS table

Aug 25, 2023
  updated CL source to CL release 2023-08-24

Jul 24, 2023
  updated CL source to CL release 2023-07-20
  EfoLoader: limits input to GWAS records having a single EFO entry
  parser: ignoring lines 'property_value: term_tracker_item ...'
  parser: loading lines 'property_value: IAO:0000028 ...' as synonyms

Jul 05, 2023