@@ -33,7 +33,7 @@ dependencies {
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.5.0.24.07'
-    implementation 'org.springframework:spring-jdbc:6.1.10'
+    implementation 'org.springframework:spring-jdbc:6.1.12'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
