@@ -2,7 +2,7 @@
 <beans>
 
 	<bean id="manager" class="edu.mcw.rgd.dataload.ontologies.Manager">
-        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Aug 08, 2024" />
+        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Aug 09, 2024" />
 
         <!-- for security reasons, actual value of the API KEY should not be stored in public github code -->
         <property name="apiKeyFile" value="properties/api.key"/>
@@ -49,8 +49,6 @@
                 <entry key="NCBITaxon" value="file:///tmp/ncbitaxon.obo"/>
                 <entry key="CVCL" value="ftp://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo"/>
                 <entry key="MONDO" value="http://purl.obolibrary.org/obo/mondo/mondo.obo"/>
-
-                <entry key="CMO" value="https://download.rgd.mcw.edu/ontology/clinical_measurement/clinical_measurement.obo"/>
             </map>
         </property>
         <property name="qualityChecker" ref="qualityChecker" />
